# graphviz

./: .cruft.json  .dir-locals.el  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  Readme.md  graphviz.py  mdx_graphviz.py  pyproject.toml  tasks.py  test_md_graphviz.py
.github/workflows/: main.yml
pelican/plugins/graphviz/: __init__.py  graphviz.py  mdx_graphviz.py  rst_graphviz.py  run_graphviz.py  test_graphviz.py
